# hyperharness

./: .borg-session.json  .borg_startup_marker  .dockerignore  .env.example  .gitignore  .gitmodules  .hypercode_queue.db  .vibe-config.json  AGENTS.md  ANALYSIS.md  ANALYSIS_GO_PORT.md  ARCHITECTURE.md  BORG_MASTER_INDEX.jsonc  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DIRECTOR_LIVE.md  Dockerfile  Dockerfile.prod  GEMINI.md  GPT.md  HANDOFF.md  HANDOFF_ANTIGRAVITY.md  HANDOFF_LOG.md  IDEAS.md  MEMORY.md  PORTING_MAP.md  PROJECT_MEMORY.md  PROJECT_MEMORY_FINAL.md  PROJECT_MEMORY_FINAL2.md  QUICKSTART.md  README.md  ROADMAP.md  START_DIRECTOR  STATUS.md  SUBMODULES.md  SUBMODULE_INVENTORY.md  TODO.md  VERSION  VERSION.md  (+77 more)
.github/: dependabot.yml
agent/: agent.go  agent_integration_test.go  agent_test.go  async.go  async_shell_assimilation_test.go  autocomplete.go  autopilot.go  autopilot_assimilation_test.go  compare.go  context.go  core_assimilation_test.go  diff.go  oracle.go  oracle_autocomplete_assimilation_test.go  orchestrator.go  orchestrator_assimilation_test.go  pipe.go  pipe_assimilation_test.go  shell.go  utilities_assimilation_test.go
agents/: auton.go  autonomy_assimilation_test.go  codemode.go  codemode_rag_hypercode_assimilation_test.go  coordination_assimilation_test.go  council.go  director.go  director_test.go  disclosure.go  interfaces.go  provider.go  provider_assimilation_test.go  provider_hypercode.go  provider_stub.go  rag.go  shell_assistant.go
apps/: merge-deps.mjs
apps/maestro-native/: CMakeLists.txt  main.cpp  package.json
apps/maestro-native/assets/: main.qml
archive/: ## Requests.md  AGENTS.md  ARCHITECTURE.md  BORG_MASTER_INDEX.jsonc  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  HANDOFF.md  MAINTENANCE.md  MEMORY.md  QUICKSTART.md  ROADMAP.md  TODO.md  VISION.md
archive/ts-legacy/apps/maestro-native/: CMakeLists.txt  main.cpp  package.json
archive/ts-legacy/apps/maestro-native/assets/: main.qml
borg/: adapter.go
cli/: mcp-router-cli.ts
cmd/: foundation.go  foundation_http.go  foundation_http_test.go  pipe.go  root.go  tui.go  (+1 more)
(+3213 files in other folders)
